[project]
name = "electronics-store"
version = "0.1.0"
description = ""
authors = [
    {name = "KovkovDS",email = "dmitrii.s.kovkov@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools (>=80.9.0,<81.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
